# tree-sitter-alpinejs

./: CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-alpinejs.pc.in
bindings/c/tree_sitter/: tree-sitter-alpinejs.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_alpinejs/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAlpinejsTests/: TreeSitterAlpinejsTests.swift
examples/: todo-app.html
queries/: highlights.scm  injections.scm  locals.scm  tags.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: basic.txt
